# Autodistil-KG_core

./: .env.example  .gitignore  DesignNotes.md  Makefile  README.md  pyproject.toml  run.py
config/: default.json  pipeline_full.json
data/: sample_chatml.jsonl
scripts/: dblp_loader_to_neo4j.py
scripts/finetuning/: unsloth_finetuner_script.ipynb
scripts/graph_traverser/: graph_traverser.ipynb
src/autodistil_kg/: __init__.py  run.py
src/autodistil_kg/eval/: __init__.py  evalg_adapter.py  internal_evaluator.py  predictors.py  scorers.py
src/autodistil_kg/finetuner/: __init__.py  config.py  unsloth_finetuner.py
src/autodistil_kg/graph_traverser/: README.md  __init__.py  config.py  env_config.py  example_env_usage.py  example_usage.py  factory.py  graph_traverser.py  graph_traverser_agent.py  prompts.py
src/autodistil_kg/graph_traverser/chatml/: __init__.py  dataset.py  formatter.py
src/autodistil_kg/graph_traverser/graph_db/: __init__.py  config.py  factory.py  interface.py  neo4j_provider.py
src/autodistil_kg/graph_traverser/llm/: __init__.py  config.py  factory.py  interface.py
src/autodistil_kg/graph_traverser/state_storage/: __init__.py  config.py  factory.py  interface.py  redis_storage.py
src/autodistil_kg/llm/: __init__.py  claude_client.py  config.py  factory.py  gemini_client.py  interface.py  ollama_client.py  openai_client.py  vllm_client.py
src/autodistil_kg/pipeline/: __init__.py  config.py  interfaces.py  pipeline.py
src/autodistil_kg/pipeline/stages/: __init__.py  chatml_converter_stage.py  evaluator_stage.py  finetuner_stage.py  (+1 more)
