[project]
name = "autodistil-kg"
version = "0.1.0"
description = ""
authors = [
    {name = "Nimeshaperi",email = "nimesha.periyap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)",
    "openai (>=2.16.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "anthropic (>=0.77.0,<0.78.0)",
    "requests (>=2.32.5,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]

[project.optional-dependencies]
finetune = [
    "trl>=0.22.0",
    "unsloth",
    "transformers",
    "datasets",
]

[tool.poetry]
packages = [{include = "autodistil_kg", from = "src"}]

[tool.poetry.scripts]
autodistil-kg = "autodistil_kg.run:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
